@@ -44,6 +44,7 @@ SVN trunk (1.1+svn):
    images better
    * improved (underwater) merfolk village
    * (internal) make attack animations work like all other animations
+   * backport latest SDL_ttf change, fix ascender/descender issue for DejaVu
 
 Version 1.1:
  * campaign server
